deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-deployment
  labels:
   app: secret-pod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secret-pod
  template:
    metadata:
      labels:
        app: secret-pod
    spec:
      containers:
        - name: secret-pod
          image: testaccountcsa/trivy-experimentation:v1
          ports:
            - containerPort: 8080
