pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
spec:
  containers:
  - name: secret-pod
    image: testaccountcsa/first_repo:test
    ports:
    - containerPort: 8080
