service.yaml
apiVersion: v1
kind: Service
metadata:
    name: service-secret-test
spec:
    selector:
        app: secret-pod
    ports:
        - protocol: TCP
          port: 4040
          targetPort: 8080
